--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "zeroui-playground",
+  "name": "valet-playground",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@archway/valet": "^0.2.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.0"
