--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,25 +1,31 @@
 {
+  // ---------------------------------------------------------------------------
+  //  Node-side tooling (Vite config, scripts, etc.) — *never shipped to browser*
+  // ---------------------------------------------------------------------------
   "compilerOptions": {
-    "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
-    "target": "ES2022",
-    "lib": ["ES2023"],
-    "module": "ESNext",
-    "skipLibCheck": true,
-
-    /* Bundler mode */
+    "target": "ES2020",
+    "module": "ESNext",                    // your package.json is `"type": "module"`
     "moduleResolution": "bundler",
+    "lib": ["ES2020"],
     "allowImportingTsExtensions": true,
-    "verbatimModuleSyntax": true,
-    "moduleDetection": "force",
+
+    /* Type safety ----------------------------------------------------------- */
+    "strict": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+
+    /* Build behaviour ------------------------------------------------------- */
+    "composite": false,
     "noEmit": true,
 
-    /* Linting */
-    "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "erasableSyntaxOnly": true,
-    "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    /* Ambient types --------------------------------------------------------- */
+    "types": ["node"]
   },
-  "include": ["vite.config.ts"]
+
+  /* Files that live exclusively in a Node context -------------------------- */
+  "include": [
+    "vite.config.ts",
+    "scripts/**/*.ts"
+  ],
+  "exclude": ["node_modules"]
 }
